@@ -30,6 +30,9 @@ IN DEVELOPMENT
 
   TESTING:
 
+    * The branch interface tests were invalid for branches using subtree
+      repositories by default. This has been fixed. (Robert Collins)
+
   INTERNALS:
 
     * New remote method ``RemoteBzrDir.find_repositoryV2`` adding support for
